deployment-simple.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # name of the deployment
  name: app-deployment
  # labels uniquely identify the deployment. 
  # The key names are arbitrary but "app" and "tier" are commonly used.
  # you can add as many as you like
  labels:
    app: appname
    tier: front
spec:
  replicas: 1
  selector:
  # selector tells the deployment which pods to talk to (defined in template)
  # It correlates the deployment with the pod
    matchLabels: # labels defined in the pod
      app: appname
      tier: front
  template:
  # The template describes the pod that is launched. The pod too has labels
  # This is the same as if you define a Pod like this:
  # apiVersion: v1
  # kind: Pod
  # metadata: 
  #   name: ...
  #   labels: ...
    metadata:
      labels:
        app: appname
        tier: front
    spec:
  # This part defines the container and which image to use.
      containers:
      - name: appname
        image: url.to.image
        ports:
        - containerPort: 80
  # Optionally we can request and limit resources like cpu, memory, storage and more.
        resources:
          requests:
            memory: 128Mi
            cpu: 250m
          limits: 
            memory: 512Mi
            cpu: 500m
