clusterIP.yaml
# Internal service
apiVersion: v1
kind: Service
metadata: 
  name: svc-ep
spec:
  type: ClusterIP
  selector:
    app: appname
    tier: front
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
