sqlserver-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql-ep
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
