ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopmvc-ep
            port:
              number: 80
# With host
  # - host: "pstrainingen.nl"
  #   http:
  #     paths:
  #     - path: /shop
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: shopmvc-ep
  #           port:
  #             number: 80
