ingress-tls-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-frontend
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pstrainingen.nl
    secretName: ingress-cert
  rules:
  - host: pstrainingen.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopmvc-ep
            port:
              number: 80
